name:                pandoc-emphasize-code
synopsis:            A Pandoc filter for emphasizing code in fenced blocks
description:
  A Pandoc filter for emphasizing sections of code in fenced blocks.
author:              Oskar Wickström
maintainer:          Oskar Wickström
homepage:	           https://github.com/owickstrom/pandoc-emphasize-code
version:             0.1.0.0
cabal-version:       >= 1.8
build-type:          Simple
category:            Documentation
license:             MPL-2.0
license-file:        LICENSE
extra-source-files:  CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/owickstrom/pandoc-emphasize-code.git

library
    hs-source-dirs:  src
    exposed-modules: Text.Pandoc.Filter.EmphasizeCode
                     Text.Pandoc.Filter.Position
                     Text.Pandoc.Filter.Range
                     Text.Pandoc.Filter.Chunking
    build-depends:   base                 >= 4        && < 5
                   , unordered-containers >= 0.2      && < 0.3
                   , process
                   , hashable             >= 1.2      && < 2
                   , filepath
                   , text                 >= 1.2      && < 1.3
                   , mtl                  >= 2.2      && < 3
                   , pandoc-types         >= 1.12     && <= 1.19


executable pandoc-emphasize-code
    hs-source-dirs:  filter
    other-modules:   Paths_pandoc_emphasize_code
    main-is:         Main.hs
    build-depends:   base                 >= 4        && < 5
                   , pandoc-types         >= 1.12     && <= 1.19
                   , pandoc-emphasize-code

test-suite filter-tests
    type:            exitcode-stdio-1.0
    hs-source-dirs:  test
    main-is:         Main.hs
    other-modules:   Text.Pandoc.Filter.EmphasizeCodeTest
                     Text.Pandoc.Filter.RangeTest
    build-depends:   base                 >= 4        && < 5
                   , pandoc-types         >= 1.12     && <= 1.19
                   , pandoc-emphasize-code
                   , tasty
                   , tasty-hunit
                   , tasty-hspec
                   , tasty-discover
