name:                pandoc-emphasize-code
synopsis:            A Pandoc filter for emphasizing code in fenced blocks
description:
  A Pandoc filter for emphasizing sections of code in fenced blocks.
author:              Oskar Wickström
maintainer:          Oskar Wickström
homepage:	           https://github.com/owickstrom/pandoc-emphasize-code
version:             0.2.4
cabal-version:       >= 1.8
build-type:          Simple
category:            Documentation
license:             MPL-2.0
license-file:        LICENSE

source-repository head
  type:     git
  location: git://github.com/owickstrom/pandoc-emphasize-code.git

library
    hs-source-dirs:  src
    exposed-modules: Text.Pandoc.Filter.EmphasizeCode
                     Text.Pandoc.Filter.EmphasizeCode.Chunking
                     Text.Pandoc.Filter.EmphasizeCode.Html
                     Text.Pandoc.Filter.EmphasizeCode.Latex
                     Text.Pandoc.Filter.EmphasizeCode.Parser
                     Text.Pandoc.Filter.EmphasizeCode.Position
                     Text.Pandoc.Filter.EmphasizeCode.Pretty
                     Text.Pandoc.Filter.EmphasizeCode.Range
                     Text.Pandoc.Filter.EmphasizeCode.Renderable
    build-depends:   base                 >= 4        && < 5
                   , unordered-containers >= 0.2      && < 0.3
                   , semigroups
                   , process
                   , hashable             >= 1.2      && < 2
                   , filepath
                   , text                 >= 1.2      && < 1.3
                   , mtl                  >= 2.2      && < 3
                   , pandoc-types         >= 1.12     && <= 1.19
                   , lucid                >= 2.9      && < 3
    ghc-options:     -Wall


executable pandoc-emphasize-code
    hs-source-dirs:  filter
    other-modules:   Paths_pandoc_emphasize_code
    main-is:         Main.hs
    build-depends:   base                 >= 4        && < 5
                   , pandoc-types         >= 1.12     && <= 1.19
                   , pandoc-emphasize-code

test-suite filter-tests
    type:            exitcode-stdio-1.0
    hs-source-dirs:  test
    main-is:         Main.hs
    other-modules:   Text.Pandoc.Filter.EmphasizeCodeTest
                     Text.Pandoc.Filter.EmphasizeCode.ParserTest
                     Text.Pandoc.Filter.EmphasizeCode.RangeTest
                     Text.Pandoc.Filter.EmphasizeCode.ChunkingTest
                     Text.Pandoc.Filter.EmphasizeCode.Testing.Ranges
    build-depends:   base                 >= 4        && < 5
                   , unordered-containers >= 0.2      && < 0.3
                   , pandoc-types         >= 1.12     && <= 1.19
                   , pandoc-emphasize-code
                   , tasty
                   , tasty-hunit
                   , tasty-hspec
                   , tasty-discover
                   , text                 >= 1.2      && < 1.3
